# learn_ai

./: rnn.py  rnn_reviews.py
llm/: .gitignore  README.md  README_BAK.md  install.sh  requirements.txt
llm/llm_course/: Untitled.ipynb  Untitled1.ipynb  openbayes-intro.ipynb  playground.ipynb  requirements.txt  test2.ipynb
llm/llm_course/demo/: demo_gradio.py
llm/llm_course/introduction/: cuda_info.ipynb
llm/llm_course/introduction/cuda_case/: CMakeLists.txt  Makefile  demo.py  main.py  mmul.py
llm/llm_course/introduction/cuda_case/src/: mmul.cc  mmul.cu
llm/llm_course/introduction/pytorch_basic/: pytorch_autograd.ipynb  pytorch_basic_oper.ipynb  pytorch_basic_operTest1.ipynb  pytorch_basic_operTest2.ipynb
llm/llm_course/introduction/training_basic/: scratch _me.ipynb  scratch.ipynb  test9_11.ipynb
llm/llm_course/quantize/: ggml.sh  gptq.py  gptq_gen.py
llm/llm_course/test/: hmm_weather_example.py  intro.ipynb  jieba_ner.py  n_gram.py  nlp_base1.py  pca.py  rnn.py  rnn_reviews.py  rnn_test.py  spacy_ner.py  test1.py  var.py  word2vec.py
llm/llm_course/train_optimize/: llm_course.py  llm_course.sh
llm/llm_course/triton_server/: README.md  api.py  client.html  llm_triton.py  main.py
llm/llm_course/trl_version_sft/: README.md  accelerate_config.yaml  imdb.csv  run.sh  v1.py  v2.py
